--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,17 @@
             <groupId>org.seleniumhq.selenium</groupId>								
             <artifactId>selenium-java</artifactId>								
             <version>3.4.0</version>								
-		</dependency>				
+	</dependency>				
         <dependency>				
             <groupId>org.testng</groupId>								
             <artifactId>testng</artifactId>								
             <version>6.10</version>								
             <scope>test</scope>							  			
-       </dependency>				
+       </dependency>
+	<dependency>
+		<groupId>io.github.bonigarcia</groupId>
+		<artifactId>webdrivermanager</artifactId>
+		<version>1.7.2</version>
+	</dependency>
 </dependencies>
 </project>
