--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="webdrivermanager-1.7.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
