--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 		<groupId>io.github.bonigarcia</groupId>
 		<artifactId>webdrivermanager</artifactId>
 		<version>1.7.2</version>
+		<scope>test</scope>		
 	</dependency>
 </dependencies>
 </project>
