--- a/circle.yml
+++ b/circle.yml
@@ -4,3 +4,10 @@ dependencies:
     - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
     - sudo dpkg -i ./google-chrome*.deb
     - sudo apt-get install -f
+
+test:
+  pre:
+    - wget http://chromedriver.storage.googleapis.com/2.22/chromedriver_linux32.zip
+    - unzip chromedriver_linux32.zip
+    - ./chromedriver --port=4444 --url-base=we/hub:
+        background: true
