--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,5 @@ jobs:
       - image: selenium/standalone-chrome:3.1.0
     steps:
       - run:
-        -name: Run tests
-        -command: mvn test
+          name: Run tests
+          command: mvn test
