--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,5 @@ jobs:
       - image: selenium/standalone-chrome:3.1.0
     steps:
       - checkout
-      - run:
-          name: Run tests
-          command: mvn test
+      - run: mvn dependency:go-offline
+         
