--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,6 @@ jobs:
       - image: selenium/standalone-chrome:3.1.0
     steps:
       - checkout
+      - run: apt-get install maven
       - run: mvn dependency:go-offline
          
