--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,4 +7,8 @@ jobs:
       - checkout
       - run: sudo apt-get install maven
       - run: mvn dependency:go-offline
+      - run: sudo apt-get install software-properties-common
+      - run: sudo apt-add-repository universe
+      - run: sudo apt-get update
+      - run: sudo apt-get install maven
          
