--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: selenium/standalone-chrome:3.1.0
+      - image: circleci/openjdk:8-node-browsers
     steps:
       - checkout
       - run: sudo apt-get install software-properties-common
