--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,3 +7,4 @@ jobs:
       - checkout
       - run: sudo apt-get install maven
       - run: mvn dependency:go-offline
+      - run: mvn integration-test
